Fixed overlapping issue on explore page.

--- a/static/assets/css/explore.css
+++ b/static/assets/css/explore.css
@@ -1,7 +1,7 @@
 .searchbar {
     position: sticky;
     top: 3rem;
-    z-index: 10;
+    z-index: 1;
     width: min(50%, 60rem);
 
     margin-top: 5rem;
