--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -266,6 +266,7 @@ main.app {
     place-items: center;
 
     position: fixed;
+    z-index: 100;
     top: 0;
     left: 0;
 
